--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1883,8 +1883,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #2ee4bb;
-			color: #2ee4bb !important;
+			box-shadow: inset 0 0 0 2px #cffcbd;
+			color: #000000 !important;
 		}
 
 		input[type="submit"]:active,
@@ -1894,7 +1894,7 @@ input, select, textarea {
 		.button:active {
 			background-color: rgba(73, 252, 212, 0.25);
 			box-shadow: inset 0 0 0 2px #2ee4bb;
-			color: #2ee4bb !important;
+			color: #000000 !important;
 		}
 
 		input[type="submit"].small,
@@ -1971,7 +1971,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #4bb161;
+				background-color: #cffcbd;
 			}
 
 			input[type="submit"].primary:active,
@@ -1979,7 +1979,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #4bb161;
+				background-color: #cffcbd;
 			}
 
 		@media screen and (max-width: 736px) {
