--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1883,7 +1883,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #cffcbd;
+			box-shadow: inset 0 0 0 2px #ffa262;
 			color: #000000 !important;
 		}
 
@@ -1971,7 +1971,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #cffcbd;
+				background-color: #ffa262;
 			}
 
 			input[type="submit"].primary:active,
@@ -1979,7 +1979,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #cffcbd;
+				background-color: #ffa262;
 			}
 
 		@media screen and (max-width: 736px) {
