--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1883,7 +1883,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #ffa262;
+			box-shadow: inset 0 0 0 2px #f1d3b6;
 			color: #000000 !important;
 		}
 
@@ -1892,8 +1892,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(73, 252, 212, 0.25);
-			box-shadow: inset 0 0 0 2px #2ee4bb;
+			background-color: rgba(252, 168, 73, 0.25);
+			box-shadow: inset 0 0 0 2px #f1d3b6;
 			color: #000000 !important;
 		}
 
@@ -1971,7 +1971,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ffa262;
+				background-color: #f1d3b6;
 			}
 
 			input[type="submit"].primary:active,
@@ -1979,7 +1979,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #ffa262;
+				background-color: #f1d3b6;
 			}
 
 		@media screen and (max-width: 736px) {
@@ -2135,7 +2135,7 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #2ee4bb;
+			border-color: #f1d3b6;
 		}
 
 	label {
