--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4258,3 +4258,45 @@ input, select, textarea {
 		}
 
 	}
+
+
+
+
+
+
+
+
+
+
+
+
+	/* CSS */
+.faq {
+	max-width: 800px;
+	margin: 40px auto;
+	padding: 20px;
+	background-color: #f9f9f9;
+	border: 1px solid #ddd;
+	box-shadow: 0 0 10px rgba(215, 215, 215, 0.1);
+  }
+  
+  details {
+	margin-bottom: 20px;
+  }
+  
+  summary {
+	font-size: 18px;
+	font-weight: bold;
+	cursor: pointer;
+	color: #857754; 
+  }
+  
+  details[open] summary {
+	color: #000;
+  }
+  
+  details p {
+	font-size: 17px;
+	margin-bottom: 10px;
+	color: #000000;
+  }
